# ecdypy

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  Makefile  README.rst  pyproject.toml
docs/: conf.py  documentation.rst  examples.rst  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
docs/api/: codewriter.rst  macros.rst  rconstructs.rst  rtypes.rst
ecdypy/: __init__.py  _meta.py  codewriter.py  decorators.py  macros.py  rconstructs.py  rtypes.py  types.py
tests/: test_codewriter.py  test_rconstructs.py  test_rtypes.py  test_types.py
