[tool.poetry]
name = "ecdypy"
version = "0.0.1"
description = "Python3 package that helps you generate Rust (https://www.rust-lang.org/) code with Python."
authors = ["James Hardy <cyanjamesmail@gmail.com>"]
# license = "MIT"
readme = "README.rst"
repository = "https://github.com/YammyToast/ecdypy"

#documentation = ""
classifiers = [
    # Trove classifiers
    # Full list: https://pypi.python.org/pypi?%3Aaction=list_classifiers
    # Add License
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: Software Development :: Pre-processors",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Rust",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent"
]

keywords = ["codegen", "rust", "embedded", "codegeneration"]

include = ["LICENSE.md"]

packages = [
    {include = "ecdypy"}
]

[tool.poetry.dependencies]
python = ">=3.7"

[tool.poetry.dev-dependencies]
Sphinx = "^7.2.6"
pytest = "^6.2"
black="^22.3"
flake = "^6.1.0"
readme-renderer = "^42.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"